--- a/index - copia.html
+++ b/index - copia.html
@@ -159,7 +159,7 @@
     <div class="scrollblock block-tagging">
         <h2>etiquetas</h2>
         <p>
-            Se asdasdasd crear etiquetas para cada nueva versión publicada de un software. Este concepto no es nuevo, ya que estaba disponible en SVN. Puedes crear una nueva etiqueta llamada <i>1.0.0</i> ejecutando<br />
+            Se recomienda crear etiquetas para cada nueva versión publicada de un software. Este concepto no es nuevo, ya que estaba disponible en SVN. Puedes crear una nueva etiqueta llamada <i>1.0.0</i> ejecutando<br />
             <code>git tag 1.0.0 1b2e1d63ff</code><br />
             <i>1b2e1d63ff</i> se refiere a los 10 caracteres del commit id al cual quieres referirte con tu etiqueta. Puedes obtener el commit id con <br />
             <code>git log</code><br />
