--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </script>
 </head>
 <body>
+	Eric
     <div class="scrollblock block-title">
                <h1>git - la guía sencilla</h1>
         <p>una guía sencilla para comenzar con git. sin complicaciones ;)</p>
